--- a/client/index.html
+++ b/client/index.html
@@ -8,8 +8,34 @@
 </head>
 <body>
 
+
+    <input type="text" id="input">
+    <button type="submit" id="sentToAll" >sent to all</button>
+    <button type="submit" >sent</button>
+
+
+<div id="target">
+
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 <script src="/socket.io/socket.io.js"></script>
 <script src="client.js"></script>
+
+
 
 </body>
 </html>
