server receive message and clien can reply

--- a/client/index.html
+++ b/client/index.html
@@ -10,8 +10,8 @@
 
 
     <input type="text" id="input">
-    <button type="submit" id="sentToAll" >sent to all</button>
-    <button type="submit" >sent</button>
+    <button type="button" id="sentToAll" onclick="sendToAll()">sent to all</button>
+    <button type="button" onclick="sendToMe()" >sent to me</button>
 
 
 <div id="target">
