changed inputname to prompt

--- a/client/index.html
+++ b/client/index.html
@@ -8,10 +8,8 @@
 </head>
 <body>
 
-<div container-identification>
-    <h4>please enter your user name</h4>
-    <input id="userName">
-    <button type="button" id="inputName" onclick="setUser()">confirm</button>
+
+<div id=allUsers>
 
 </div>
 
