--- a/client/index.html
+++ b/client/index.html
@@ -8,10 +8,8 @@
 </head>
 <body>
 
-
-<div id=allUsers>
-
-</div>
+<div id="welcome"></div>
+<div id=allUsers></div>
 
 <div class="container-input">
     <h3>Message</h3>
