--- a/client/index.html
+++ b/client/index.html
@@ -8,17 +8,22 @@
 </head>
 <body>
 
+<div class="container-top">
 <div id="welcome"></div>
 <div id=allUsers></div>
+</div>
 
 <div class="container-input">
-    <h3>Message</h3>
+    <h1>Message</h1>
     <div class="inputfield">
-        <input type="text" id="input">
-        <div class="inputButtons">
-            <button type="button" id="sentToAll" onclick="sendToAll()">sent to all</button>
-            <button type="button" onclick="sendToMe()" >sent to me</button>
+        <div>
+            <input type="text" id="input">
+            <div class="inputButtons">
+                <button class=button type="button" id="sentToAll" onclick="sendToAll()">sent to all</button>
+                <button class= button type="button" onclick="sendToMe()" >sent to me</button>
+            </div>
         </div>
+
 
     </div>
 
