--- a/client/index.html
+++ b/client/index.html
@@ -14,14 +14,14 @@
 </div>
 
 <div class="container-text">
-    <h1>Message</h1>
+    <h1>Messages</h1>
     <div class="textfield">
 
         <div class="sentItems">
-            <input type="text" id="input">
+            <textarea type="text" id="input"></textarea>
             <div class="inputButtons">
                 <button class=button type="button" id="sentToAll" onclick="sendToAll()">sent to all</button>
-                <button class= button type="button" onclick="sendToMe()" >sent to me</button>
+               <!-- <button class= button type="button" onclick="sendToMe()" >sent to me</button>-->
             </div>
         </div>
         <div id="target"></div>
